service/tests/requests/snapshots/users/can_assign_role_to_user@users.snap
---
source: tests/requests/users.rs
expression: "(response.status_code(), response.text())"
---
(
    201,
    "{\"id\":1,\"pid\":\"PID\",\"userId\":22,\"roleId\":11,\"createdAt\":\"DATE\",\"updatedAt\":\"DATE\"}",
)
