service/tests/requests/snapshots/users/can_create_staff_user@users.snap
---
source: tests/requests/users.rs
expression: "(response.status_code(), response.text(), assigned_roles,)"
---
(
    201,
    "{\"message\":\"Staff account created successfully. Please ask the user to verify their email.\"}",
    1,
)
