service/tests/requests/snapshots/users/can_list_customer_users@users.snap
---
source: tests/requests/users.rs
expression: "(response.status_code(), response.text())"
---
(
    200,
    "[{\"id\":44,\"pid\":\"PID\",\"name\":\"Morgan Grimes\",\"email\":\"morgan@mail.io\",\"image\":\"https://randomuser.me/api/portraits/women/65.jpg\",\"verified\":false,\"roles\":[{\"id\":22,\"pid\":\"PID\",\"name\":\"customer\",\"description\":\"Regular shoppers\"}],\"createdAt\":\"DATE\",\"updatedAt\":\"DATE\"},{\"id\":33,\"pid\":\"PID\",\"name\":\"James Moriaty\",\"email\":\"james.moriaty@continental.org\",\"image\":\"https://randomuser.me/api/portraits/men/46.jpg\",\"verified\":false,\"roles\":[{\"id\":22,\"pid\":\"PID\",\"name\":\"customer\",\"description\":\"Regular shoppers\"}],\"createdAt\":\"DATE\",\"updatedAt\":\"DATE\"},{\"id\":22,\"pid\":\"PID\",\"name\":\"Jane Smith\",\"email\":\"jane.smith@globex.com\",\"image\":\"https://randomuser.me/api/portraits/women/44.jpg\",\"verified\":false,\"roles\":[{\"id\":22,\"pid\":\"PID\",\"name\":\"customer\",\"description\":\"Regular shoppers\"}],\"createdAt\":\"DATE\",\"updatedAt\":\"DATE\"}]",
)
