service/tests/requests/snapshots/users/can_list_users@users.snap
---
source: tests/requests/users.rs
expression: "(response.status_code(), response.text())"
---
(
    200,
    "[{\"id\":66,\"pid\":\"PID\",\"name\":\"Department Manager\",\"email\":\"manager1@silk.com\",\"image\":\"https://randomuser.me/api/portraits/men/77.jpg\",\"verified\":true,\"roles\":[{\"id\":33,\"pid\":\"PID\",\"name\":\"manager\",\"description\":\"Departmental heads\"}],\"createdAt\":\"DATE\",\"updatedAt\":\"DATE\"},{\"id\":55,\"pid\":\"PID\",\"name\":\"System Administrator\",\"email\":\"admin@silk.com\",\"image\":\"https://randomuser.me/api/portraits/men/75.jpg\",\"verified\":true,\"roles\":[{\"id\":11,\"pid\":\"PID\",\"name\":\"administrator\",\"description\":\"System administrator\"}],\"createdAt\":\"DATE\",\"updatedAt\":\"DATE\"},{\"id\":44,\"pid\":\"PID\",\"name\":\"Morgan Grimes\",\"email\":\"morgan@mail.io\",\"image\":\"https://randomuser.me/api/portraits/women/65.jpg\",\"verified\":false,\"roles\":[{\"id\":22,\"pid\":\"PID\",\"name\":\"customer\",\"description\":\"Regular shoppers\"}],\"createdAt\":\"DATE\",\"updatedAt\":\"DATE\"},{\"id\":33,\"pid\":\"PID\",\"name\":\"James Moriaty\",\"email\":\"james.moriaty@continental.org\",\"image\":\"https://randomuser.me/api/portraits/men/46.jpg\",\"verified\":false,\"roles\":[{\"id\":22,\"pid\":\"PID\",\"name\":\"customer\",\"description\":\"Regular shoppers\"}],\"createdAt\":\"DATE\",\"updatedAt\":\"DATE\"},{\"id\":22,\"pid\":\"PID\",\"name\":\"Jane Smith\",\"email\":\"jane.smith@globex.com\",\"image\":\"https://randomuser.me/api/portraits/women/44.jpg\",\"verified\":false,\"roles\":[{\"id\":22,\"pid\":\"PID\",\"name\":\"customer\",\"description\":\"Regular shoppers\"}],\"createdAt\":\"DATE\",\"updatedAt\":\"DATE\"},{\"id\":11,\"pid\":\"PID\",\"name\":\"John Doe\",\"email\":\"john.doe@silk.com\",\"image\":\"https://randomuser.me/api/portraits/men/32.jpg\",\"verified\":true,\"roles\":[{\"id\":44,\"pid\":\"PID\",\"name\":\"support\",\"description\":\"Customer support\"}],\"createdAt\":\"DATE\",\"updatedAt\":\"DATE\"}]",
)
