service/tests/requests/snapshots/users/can_list_users_when_role_does_not_exist@users.snap
---
source: tests/requests/users.rs
expression: "(response.status_code(), response.text())"
---
(
    200,
    "[]",
)
