service/tests/requests/snapshots/users/can_revoke_role_from_user@users.snap
---
source: tests/requests/users.rs
expression: "(response.status_code(), response.text())"
---
(
    204,
    "",
)
