service/tests/requests/snapshots/users/cannot_assign_role_to_user_without_credentials@users.snap
---
source: tests/requests/users.rs
expression: "(response.status_code(), response.text())"
---
(
    401,
    "{\"error\":\"Missing credentials\"}",
)
