service/tests/requests/snapshots/users/cannot_assign_role_to_user_without_permission@users.snap
---
source: tests/requests/users.rs
expression: "(response.status_code(), response.text())"
---
(
    403,
    "{\"error\":\"Forbidden\",\"code\":\"forbidden\"}",
)
