service/tests/requests/snapshots/users/cannot_assign_role_when_user_already_has_role@users.snap
---
source: tests/requests/users.rs
expression: snapshot
---
(
    409,
    "{\"error\":\"User has already been assigned that role\",\"code\":\"entity_already_exists\"}",
)
